--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#F97316" />
     <link rel="manifest" href="/manifest.webmanifest" />
-    <link rel="icon" type="image/png" sizes="192x192" href="/icons/icon-192x192.png" />
-    <link rel="apple-touch-icon" href="/icons/icon-192x192.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/icons/maskable_icon_x192.png" />
+    <link rel="apple-touch-icon" href="/icons/maskable_icon_x192.png" />
     <title>Parada do Espetinho</title>
   </head>
   <body>
