chore: atualizar logos no header e favicon

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,8 @@
     <meta name="theme-color" content="#F97316" />
     <link rel="manifest" href="/manifest.webmanifest" />
     <link rel="icon" type="image/png" sizes="192x192" href="/icons/maskable_icon_x192.png" />
-    <link rel="apple-touch-icon" href="/icons/maskable_icon_x192.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/icons/maskable_icon_x512.png" />
+    <link rel="apple-touch-icon" href="/icons/maskable_icon_x512.png" />
     <title>Parada do Espetinho</title>
   </head>
   <body>
